zgloszenia: trojka nie / tak / prawie i dolaczanie do podobnej sprawy
Pod podobnymi zgloszeniami i dopasowanymi innowacjami jest decyzja: To nie to / To moja sprawa (To mi pomoglo) / Prawie - brakuje mi... z dopiskiem. To moja sprawa dolacza zgloszenie do tamtej sprawy: dolaczony widzi jej opis, gmine, status i liczbe dolaczonych, bez watku i kodu. Skrzynka admina pokazuje sprawe raz z licznikiem dolaczyl(o) N osob i stawia ja wyzej. Migracja SimilarReportVerdicts, testy API, zalozenia A-46/A-47.
